DBJR-495: fix text overflow applied too soon

--- a/assets/less/admin.less
+++ b/assets/less/admin.less
@@ -59,7 +59,7 @@
     }
 }
 
-.text-overflow {
+.text-overflow-small {
     .text-overflow();
     max-width: 9em;
 }
